@@ -1,3 +1,14 @@
+2000-02-08  Alexander V. Lukyanov  <lav@yars.free.net>
+
+	* FileCopy.cc: don't show rate when put==0.
+	* Makefile.am: remove ftpget.o.
+	* SMTask.cc, SMTask.h: (current) new static member; empty all block's
+	  before calling all Do's.
+	* NetAccess.cc: (DelayingMessage) use current->Timeout.
+	* PollVec.h: add GetTimeout for debugging.
+	* Speedometer.cc: use current->Timeout.
+	* StatusLine: use TimeoutS.
+
 2000-02-06  Alexander V. Lukyanov  <lav@yars.free.net>
 
 	* CmdExec.cc: (PrintStatus) special case for CopyJobEnv in queue mode.
